--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   </div>
 
   <header class="header">
+    /index.html
     <div class="wrap header-row">
       <div class="brand">
         <div class="logo">L</div>
