--- a/custom.html
+++ b/custom.html
@@ -9,8 +9,8 @@
 <body>
 
 <script>
-  window.__SUPABASE_URL__ = "PASTE_YOUR_SUPABASE_URL";
-  window.__SUPABASE_ANON_KEY__ = "PASTE_YOUR_SUPABASE_ANON_KEY";
+  window.__SUPABASE_URL__ = "https://mjvwltgomifrsivtzaki.supabase.co";
+  window.__SUPABASE_ANON_KEY__ = "sb_publishable_9IAZVYI7jUpufI3-PUDRkw_wwYwIphV";
 </script>
 
 <header class="header">
@@ -72,3 +72,4 @@
 <script type="module" src="custom.js"></script>
 </body>
 </html>
+
