--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
       <div id="ordersList" class="orders"></div>
     </div>
   </div>
-
-<script src="app.js"></script>
+  
+<script src="/config.js"></script>
 </body>
 </html>
+
